--- a/style.css
+++ b/style.css
@@ -86,3 +86,22 @@ footer {
     text-align: center;
     color: #FFFFFF;
 }
+.Problem_par_txt {
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 37px;
+    text-align: center;
+    color: #000000;
+}
+.Introducing_PiedPiperCoin {
+    /*Introducing PiedPiperCoin*/
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 72px;
+    line-height: 84px;
+    text-align: center;
+    color: #007765;
+}
